test/errors/type/str/replace1.yasl
''.replace(1, true, 1.0)
